<resources>
    <string name="app_name">Views</string>
    <string name="simple_list_view">Simple List View</string>
    <string name="spinner">Spinner</string>
    <string name="simple_button">Simple Button</string>
    <string name="image_button">Image Button</string>
    <string name="check_box">Check Box</string>
    <string name="radio_button">Radio Button</string>
    <string name="toggle_button">Toggle Button</string>
    <string name="text_field_edit_text">Text Field (Edit Text)</string>
    <string name="button_auto_complete_text_view">Auto Complete TextView</string>
    <string name="progress_bar">Progress Bar</string>
    <string name="toast">Toast</string>
    <string name="scroll_view">Scroll View</string>
    <string name="dialog_box">Dialog Box</string>
    <string name="alert_dialog">Alert Dialog</string>
    <string name="date_picker_dialog">Date Picker Dialog</string>
    <string name="time_picker_dialog">Time Picker Dialog</string>
    <string name="custom_dialog">Custom Dialog</string>
    <string name="this_is_simple_button">This is simple button</string>
    <string name="option_1">Option 1</string>
    <string name="option_2">Option 2</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="on_off">ON/OFF</string>
    <string name="switch_fan">Switch Fan</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="display_name">Display Name</string>
    <string name="create_toast">Create Toast</string>
    <string name="start">Start</string>
    <string name="select_country">Select Country</string>
    <string name="information_dialog">Information Dialog</string>
    <string name="confirmation_dialog">Confirmation Dialog</string>
    <string name="change_date">Change Date</string>
    <string name="set_date">Set Date</string>
    <string name="current_date">Current Date :</string>
    <string name="show_date_from_calender">Show Date From Calender</string>
    <string name="show_date_from_date_picker">Change Date By Date Picker</string>
    <string name="time">Time :</string>
    <string name="show_selected_time">Show Selected Time</string>
    <string name="forget_password_custom_dialog">Forget Password Custom Dialog</string>
    <string name="enter_your_register_email_id">Enter your register email id</string>
    <string name="reset">Reset</string>
</resources>